third_party/rust/indoc/v1/crate/tests/ui/non-lit.stderr
error: argument must be a single string literal
 --> $DIR/non-lit.rs:4:12
  |
4 |     indoc!(fail);
  |            ^^^^
